# github-bot

./: .env  .gitignore  Cargo.toml  loopback.md  readme.md  test.md
mock/: headers.md  issue_open.json  pr_closed.json  pr_opened.json
src/: bot.rs  db.rs  handler.rs  main.rs  middleware.rs  parser.rs  rest_api.rs  server.rs  shared.rs  utils.rs  webhook.rs
src/statements/: initdb.sql
