[package]
name = "deltachat-echo-bot"
version = "0.1.0"
authors = ["DeltaChatBot Contributers<https://github.com/deltachat-bot>"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
deltachat = { path = "../deltachat-core-rust"}
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "signal"] }
tide = "*"
clap = {version="*", features=["derive", "cargo"]}
serde_json = "*"
serde = "*"
thiserror="*"
log = "*"
env_logger = "*"
surrealdb = "1.0.0-beta.8"